Real Database for login, signup and manager screen || manager mainscreen design updated

--- a/app/src/main/res/layout/activity_manager_assign_list.xml
+++ b/app/src/main/res/layout/activity_manager_assign_list.xml
@@ -30,7 +30,7 @@
 		app:layout_constraintTop_toBottomOf="@+id/imageViewSplash" />
 	
 	<TextView
-		android:id="@+id/LogInText"
+		android:id="@+id/ManagerWelcomeText"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
 		android:layout_marginLeft="40dp"
