--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,9 @@
 	<color name="light_blue">#03A9F4</color>
 	<color name="gold">#FFC107</color>
 	
+	<!-- res/values/colors.xml -->
+	<color name="dropdown_background_color">#03A9F4</color> <!-- Example color -->
+	<color name="border_color">#FFFFFFFF</color> <!-- Example color -->
+
+
 </resources>
