--- a/app/src/main/res/layout/activity_user_task_list.xml
+++ b/app/src/main/res/layout/activity_user_task_list.xml
@@ -1,37 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
-	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="wrap_content"
 	android:layout_height="wrap_content"
 	android:background="@drawable/tmscreen1"
+	android:backgroundTint="@color/gold"
+	android:backgroundTintMode="screen"
 	android:orientation="vertical">
 	
 	<LinearLayout
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
-		android:orientation="horizontal">
+		android:orientation="horizontal"
+		>
 		
 		<TextView
-			android:id="@+id/SignUpText"
+			android:id="@+id/updateText"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:layout_marginLeft="30dp"
 			android:layout_marginTop="30dp"
 			android:layout_marginRight="40dp"
 			android:fontFamily="casual"
-			android:text="Sign Up"
-			android:textColor="@color/gold"
-			android:textSize="25dp"
+			android:text="Assigned Tasks"
+			android:textColor="@color/light_blue"
+			android:textSize="27dp"
 			android:textStyle="bold" />
 		
 		<ImageView
 			android:id="@+id/imageViewSplash"
-			android:layout_width="150dp"
+			android:layout_width="110dp"
 			android:layout_height="100dp"
 			android:layout_gravity="center"
-			android:layout_marginLeft="100dp"
+			android:layout_marginLeft="50dp"
 			android:clickable="false"
 			android:rotation="55"
 			app:srcCompat="@drawable/mrocket" />
@@ -39,32 +40,10 @@
 	
 	</LinearLayout>
 	
-	
-	<Button
-		android:id="@+id/signupbutton"
+	<ListView
+		android:id="@+id/taskuserListView"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
-		android:layout_marginLeft="40dp"
-		android:layout_marginTop="20dp"
-		android:layout_marginRight="40dp"
-		android:backgroundTint="@color/light_blue"
-		android:fontFamily="casual"
-		android:text="Employee tasks"
-		android:textSize="18dp"
-		android:textStyle="bold" />
-	
-	
-	<TextView
-		android:id="@+id/alreadyaccountclick"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:layout_gravity="center"
-		android:layout_marginTop="10dp"
-		android:fontFamily="casual"
-		android:text="Have an Account? Sign In"
-		android:textColor="@color/gold"
-		android:textStyle="bold" />
-
+		/>
 
 </LinearLayout>
-
